fix count-4 video display

--- a/mods/videocall/web/css/videocall-video-interface.css
+++ b/mods/videocall/web/css/videocall-video-interface.css
@@ -240,7 +240,7 @@
 	grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 }
 
-.gallery.count-4.wide {
+.gallery.count-4 {
 	grid-template-columns: repeat(auto-fit, minmax(48%, 1fr));
 }
 
