--- a/mods/settlers/web/css/settlers-overlays.css
+++ b/mods/settlers/web/css/settlers-overlays.css
@@ -594,7 +594,8 @@ stats overlay
 		flex-direction: column;
 	}
 	.settlers-stats-overlay{
-		min-height: min(550px, 90vh);
+		min-height: unset;
+		height: min(800px, 85vh);
 		padding: 2rem 2vw;
 		gap: 1rem;
 	}
@@ -635,6 +636,16 @@ stats overlay
 	}
 	hr {
 		margin: 1.5rem;
+	}
+
+	.stats-header{
+		flex-wrap: wrap;
+	}
+	.stats-header .overlay-tab {
+		max-width: unset;
+	}
+	.stats-header .overlay-tab.active-tab{
+		order: 1;
 	}
 }
 
