small fix to border width and colour for qr code to ensure it scans

--- a/web/saito/css-imports/themes/saito-dark.theme.css
+++ b/web/saito/css-imports/themes/saito-dark.theme.css
@@ -99,6 +99,7 @@ html[data-theme="dark"] {
   --border-thickness-modal-menu: 0px;
   --border-thickness-button-primary: var(--border-thickness-thin);
   --border-thickness-button-hover-primary: var(--border-thickness-thin);
+  --border-thickness-qr-code: 5px; /* for contrast to be able to scan */
   /* BORDER COLORS */
   --border-color-general-dividers: var(--saito-border-color);
   --border-color-general-dividers-dark: var(--color-primary);
@@ -115,7 +116,7 @@ html[data-theme="dark"] {
   --border-color-chat-popup-docked: var(--color-primary);
   --border-color-selection-box: var(--color-highlight);
   --border-color-form-input-checkbox: var(--color-contrast);
-  --border-color-qr-code: var(--border-color-general-dividers);
+  --border-color-qr-code: var(--saito-white);
   /* BACKGROUNDS */
   /* General Background Colors */
   --background-color-sidebar-left: var(--color-shadow-bubble-light);
