--- a/web/saito/css-imports/themes/saito-sangre.theme.css
+++ b/web/saito/css-imports/themes/saito-sangre.theme.css
@@ -87,8 +87,10 @@ html[data-theme="sangre"] {
   /* BORDER RADIUS */
   --border-radius-modal-menu: var(--border-radius-soft);
   /* BORDER THICKNESS */
+  --border-padding-qr-code: 0;
   --border-thickness-button-primary: var(--border-thickness-thin);
   --border-thickness-button-hover-primary: var(--border-thickness-thin);
+  --border-thickness-qr-code: var(--border-thickness-fat); /* for contrast to be able to scan */
   /* BORDER COLORS */
   --border-color-general-dividers-dark: var(--color-primary);
   --border-color-button-wallet-control: var(--color-complement);
