--- a/web/saito/css-imports/themes/saito-arcade.theme.css
+++ b/web/saito/css-imports/themes/saito-arcade.theme.css
@@ -105,8 +105,10 @@ html[data-theme="arcade"] {
   --font-color-overlay-form-text: var(--font-color-primary);
   --font-color-button-wallet-control: var(--font-color-primary);
   /* BORDER THICKNESS */
+  --border-padding-qr-code: 0;
   --border-thickness-button-primary: var(--border-thickness-thin);
   --border-thickness-button-hover-primary: var(--border-thickness-thin);
+  --border-thickness-qr-code: var(--border-thickness-fat); /* for contrast to be able to scan */
   /* BORDER COLORS */
   --border-color-general-dividers: var(--color-complement);
   --border-color-general-dividers-dark: var(--color-primary);
