--- a/web/saito/css-imports/themes/saito-dark.theme.css
+++ b/web/saito/css-imports/themes/saito-dark.theme.css
@@ -96,10 +96,11 @@ html[data-theme="dark"] {
   --border-radius-modal-menu: var(--border-radius-soft);
   --border-radius-sidebar-chat-manager: var(--border-radius-soft);
   /* BORDER THICKNESS */
+  --border-padding-qr-code: 0;
   --border-thickness-modal-menu: 0px;
   --border-thickness-button-primary: var(--border-thickness-thin);
   --border-thickness-button-hover-primary: var(--border-thickness-thin);
-  --border-thickness-qr-code: 5px; /* for contrast to be able to scan */
+  --border-thickness-qr-code: var(--border-thickness-fat); /* for contrast to be able to scan */
   /* BORDER COLORS */
   --border-color-general-dividers: var(--saito-border-color);
   --border-color-general-dividers-dark: var(--color-primary);
