--- a/mods/settlers/web/css/settlers-hud.css
+++ b/mods/settlers/web/css/settlers-hud.css
@@ -51,7 +51,7 @@
 	overflow-y: auto;
 	overflow-x: auto;
 	/*min-height: 4.5rem;*/
-	margin: 0.5rem 0;
+	margin: 0.5rem;
 }
 
 .hud .controls ul {
@@ -159,6 +159,15 @@
 	.controls {
 		margin-top: unset;
 	}
+
+	.hud .controls ul {
+		gap: 0.5rem;
+	}
+
+	.hud .controls ul li#rolldice {
+		margin-left: 0.5rem;
+	}
+
 }
 
 
