--- a/mods/settlers/web/css/settlers-playerbox.css
+++ b/mods/settlers/web/css/settlers-playerbox.css
@@ -238,7 +238,7 @@
 		display: none;
 		top: 0px;
 		left: 0px;
-		padding: 2rem;
+		padding: 1rem;
 		padding-top: 10rem;
 		width: 100%;
 		height: 100%;
@@ -248,7 +248,7 @@
 	}
 	.game-playerbox {
 		width: 100%;
-		max-width: 100%;
+		max-width: calc(100% - 6rem);
 		border-image-width: 12px;
 		border-image-outset: 2px;
 		border-width: 2px;
