--- a/web/saito/css-imports/game-overlay.css
+++ b/web/saito/css-imports/game-overlay.css
@@ -222,20 +222,31 @@
  **********************/
 .stake-info-overlay {
   width: min(400px, 80vw);
-  height: min(200px, 70vh);
+  min-height: 250px;
+  max-height: 70vh;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   align-items: center;
   font-size: 2rem;
   padding: 2rem;
+  justify-content: space-evenly;
 }
 
 .stake-info-overlay .h3 {
   font-size: 3rem;
 }
 
-.stake-info-overlay .player-table {
+.stake-info-overlay > div {
   margin: 1rem;
+}
+
+.stake-info-overlay .player-table {
+  display: grid;
+  grid-template-columns: repeat(3, max-content);
+  row-gap: 1rem;
+  column-gap: 2rem;
+  justify-items: center;
 }
 
 /*******************/
