Css fix on input

--- a/web/saito/css-imports/saito-wallet.css
+++ b/web/saito/css-imports/saito-wallet.css
@@ -691,6 +691,7 @@
 
 #withdraw-step-one .input-elem {
   color: var(--font-color-primary);
+  width: 100%;
 }
 
 #withdraw-step-one .input-elem.disabled {
