--- a/mods/poker/web/css/poker-base.css
+++ b/mods/poker/web/css/poker-base.css
@@ -37,6 +37,10 @@ body {
   filter: drop-shadow(0px 10px 20px black);
 }
 
+.smaller-font {
+  font-size: 0.8em;
+}
+
 .deal {
   display: flex;
   gap: 1rem;
