--- a/mods/paths/web/css/paths-board.css
+++ b/mods/paths/web/css/paths-board.css
@@ -313,46 +313,46 @@
 
 .central-action-round-track {
   position: absolute;
-  height: 100px;
-  width: 100px;
+  height: 8rem;
+  width: 8rem;
 }
-.central-action-roundtrack-1 {
+.central-action-round-track-1 {
   top: 130px;
   left: 1584px;
 }
-.central-action-roundtrack-2 {
+.central-action-round-track-2 {
   top: 220px;
   left: 1584px;
 }
-.central-action-roundtrack-3 {
+.central-action-round-track-3 {
   top: 220px;
   left: 1669px;
 }
-.central-action-roundtrack-4 {
+.central-action-round-track-4 {
   top: 220px;
   left: 1751px;
 }
-.central-action-roundtrack-5 {
+.central-action-round-track-5 {
   top: 315px;
   left: 1584px;
 }
-.central-action-roundtrack-6 {
+.central-action-round-track-6 {
   top: 315px;
   left: 1670px;
 }
-.central-action-roundtrack-7 {
+.central-action-round-track-7 {
   top: 407px;
   left: 1584px;
 }
-.central-action-roundtrack-8 {
+.central-action-round-track-8 {
   top: 407px;
   left: 1667px;
 }
-.central-action-roundtrack-9 {
+.central-action-round-track-9 {
   top: 407px;
   left: 1752px;
 }
-.central-action-roundtrack-10 {
+.central-action-round-track-10 {
   top: 407px;
   left: 1837px;
 }
@@ -361,54 +361,54 @@
 
 .allies-action-round-track {
   position: absolute;
-  height: 100px;
-  width: 100px;
+  height: 8rem;
+  width: 8rem;
 }
-.allies-action-roundtrack-1 {
+.allies-action-round-track-1 {
   top: 2819px;
   left: 1396px;
 }
-.allies-action-roundtrack-2 {
+.allies-action-round-track-2 {
   top: 2914px;
   left: 1396px;
 }
-.allies-action-roundtrack-3 {
+.allies-action-round-track-3 {
   top: 2914px;
   left: 1481px;
 }
-.allies-action-roundtrack-4 {
+.allies-action-round-track-4 {
   top: 29140px;
   left: 1564px;
 }
-.allies-action-roundtrack-5 {
+.allies-action-round-track-5 {
   top: 2914px;
   left: 1650px;
 }
-.allies-action-roundtrack-6 {
+.allies-action-round-track-6 {
   top: 2914px;
   left: 1734px;
 }
-.allies-action-roundtrack-7 {
+.allies-action-round-track-7 {
   top: 3007px;
   left: 1395px;
 }
-.allies-action-roundtrack-8 {
+.allies-action-round-track-8 {
   top: 3007px;
   left: 1477px;
 }
-.allies-action-roundtrack-9 {
+.allies-action-round-track-9 {
   top: 3102px;
   left: 1396px;
 }
-.allies-action-roundtrack-10 {
+.allies-action-round-track-10 {
   top: 3102px;
   left: 1479px;
 }
-.allies-action-roundtrack-11 {
+.allies-action-round-track-11 {
   top: 3102px;
   left: 1564px;
 }
-.allies-action-roundtrack-12 {
+.allies-action-round-track-12 {
   top: 3102px;
   left: 1650px;
 }
