fixed css/display issue in settings

--- a/mods/settings/web/css/settings-base.css
+++ b/mods/settings/web/css/settings-base.css
@@ -68,6 +68,11 @@
 	width: 38rem;
 }
 
+.profile-default-fee {
+    width: 100% !important;
+    padding: 0.66rem 1rem !important;
+}
+
 .settings-appspace-modules {
 	display: grid;
 	grid-gap: 1.5rem;
