--- a/mods/atr/web/css/atr-base.css
+++ b/mods/atr/web/css/atr-base.css
@@ -245,7 +245,7 @@ textarea {
   text-align: right;
 }
 
-#appstore-zip-upload {
+#nft-image-upload {
     border: 3px dotted;
     height: 30rem;
     text-align: center;
