--- a/web/saito/css-imports/saito-wallet.css
+++ b/web/saito/css-imports/saito-wallet.css
@@ -472,7 +472,7 @@
   width: 100%;
 }
 
-.withdraw-address-cont {
+.withdraw-input-cont {
   background: var(--background-color-main);
   border: 1px solid var(--border-color-general-dividers);
   display: grid;
@@ -531,7 +531,7 @@
   border: 1px solid transparent !important;
 }
 
-.withdraw-options-cont, .withdraw-address-cont i { 
+.withdraw-options-cont, .withdraw-input-cont i { 
   cursor: pointer;
   margin: 1rem;
   margin-left: 0.5rem;
