--- a/mods/atr/web/css/atr-base.css
+++ b/mods/atr/web/css/atr-base.css
@@ -25,6 +25,9 @@
 }
 .data-nft-textarea {
     height: inherit;
+    min-height: 30rem;
+    border: 1px solid #222;
+    font-size: 1.5rem;
 }
 .nft-image-preview {
     position: relative;
